@@ -110,14 +110,19 @@ README
 SIGNATURE
 t/Test-Shared-Fixture-Wikibase-Datatype-Form-Wikidata-DogCzechSingular/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Form-Wikidata-DogCzechSingular/02-version.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Form-Wikidata-DogCzechSingular/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Item-Wikidata-Human/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Item-Wikidata-Human/02-version.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Item-Wikidata-Human/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Lexeme-Wikidata-DogCzechNoun/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Lexeme-Wikidata-DogCzechNoun/02-version.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Lexeme-Wikidata-DogCzechNoun/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Property-Wikidata-InstanceOf/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Property-Wikidata-InstanceOf/02-version.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Property-Wikidata-InstanceOf/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-Fixture1/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-Fixture1/02-version.t
+t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-Fixture1/03-new.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-ReferenceURL/01-use.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Reference-Wikidata-ReferenceURL/02-version.t
 t/Test-Shared-Fixture-Wikibase-Datatype-Sense-Wikidata-Dog/01-use.t
